second post and layout

--- a/contact/index.html
+++ b/contact/index.html
@@ -219,6 +219,9 @@
           <li class="mb-3"><a class="text-dark"
               href="/categories/%e6%96%b0%e6%89%8b%e7%90%86%e8%b2%a1%e7%9c%8b%e9%80%99%e9%82%8a/">新手理財看這邊</a>
           </li>
+          <li class="mb-3"><a class="text-dark"
+              href="/categories/%e8%81%af%e7%9b%9f%e8%a1%8c%e9%8a%b7/">聯盟行銷</a>
+          </li>
         </ul>
       </div>
       <div class="col-lg-3 col-sm-6 mb-5">
